# snd_be

./: .clang-format  CMakeLists.txt  README.md  doxygen.cfg  snd_be.cfg
src/: AlsaPcm.cpp  AlsaPcm.hpp  CMakeLists.txt  CommandHandler.cpp  CommandHandler.hpp  Config.cpp  Config.hpp  MockBackend.cpp  MockBackend.hpp  PipeWirePcm.cpp  PipeWirePcm.hpp  PulsePcm.cpp  PulsePcm.hpp  SndBackend.cpp  SndBackend.hpp  SoundItf.hpp  Test.cpp  pack.h  sndif.h
